modifications to hover image and controls

--- a/3D.html
+++ b/3D.html
@@ -90,6 +90,7 @@ onmouseout="this.src='slideshowbuttons/prev.png'" alt="prev" </a>
   crossorigin="anonymous"></script>
 <!-- <script type="text/javascript" src="JAVASCRIPTSLIDESHOW.js"></script> -->
 <script type="text/javascript" src="pictoggle.js"></script>
+<script type="text/javascript" src="JAVASCRIPTSLIDESHOW.js"></script>
 
 
 
